--- a/.github/workflows/terraform_apply.yml
+++ b/.github/workflows/terraform_apply.yml
@@ -35,7 +35,8 @@ jobs:
         run: terraform validate
 
       - name: Terraform Plan
-        run: terraform plan -chdir=terraform -out=tfplan
+        working-directory: ./terraform   # Specify the working directory
+        run: terraform plan -out=tfplan
 
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
