--- a/.github/workflows/terraform1.yml
+++ b/.github/workflows/terraform1.yml
@@ -3,7 +3,11 @@
 name: CI/CD
 
 on:
+  workflow_dispatch:
   push:
+    branches:
+      - development
+  pull_request:
     branches:
       - development
 
