--- a/.github/workflows/terraform_apply.yml
+++ b/.github/workflows/terraform_apply.yml
@@ -16,6 +16,7 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      TF_GITHUB_TOKEN: ${{ secrets.TF_GITHUB_TOKEN }} # Custom secret name for GitHub token
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
