--- a/.github/workflows/terraform_apply.yml
+++ b/.github/workflows/terraform_apply.yml
@@ -30,7 +30,7 @@ jobs:
         run: echo "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}" >> $GITHUB_ENV && echo "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}" >> $GITHUB_ENV
       
       - name: Terraform Init
-        run: terraform init -upgrade=true
+        run: terraform init 
       
       - name: Terraform Validate
         run: terraform validate
