--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -7,20 +7,15 @@ on:
       - development
 
 jobs:
-  tf-destroy:
+  terraform:
+    name: Terraform Deployment
     runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      TF_GITHUB_TOKEN: ${{ secrets.TF_GITHUB_TOKEN }} # Custom secret name for GitHub token
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-
       - name: Show AWS Identity
         run: aws sts get-caller-identity
 
