--- a/.github/workflows/terraform_destroy.yml
+++ b/.github/workflows/terraform_destroy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - development
+
 jobs:
   terraform_destroy:
     name: Terraform Destroy
@@ -21,34 +22,21 @@ jobs:
           terraform_version: 1.1.0
 
       - name: Configure AWS Credentials
-        run: echo "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}" >> $GITHUB_ENV && echo "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}" >> $GITHUB_ENV
+        run: |
+          echo "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}" >> $GITHUB_ENV
+          echo "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}" >> $GITHUB_ENV
 
       - name: Terraform Init
         run: terraform init
-        # Adding debug information
-        env:
-          TF_LOG: DEBUG
-
-      - name: Check Terraform State
-        run: terraform state list
-        # Adding debug information
         env:
           TF_LOG: DEBUG
 
       - name: Terraform Plan Destroy
         run: terraform plan -destroy
-        # Adding debug information
         env:
           TF_LOG: DEBUG
 
       - name: Terraform Destroy
         run: terraform destroy -auto-approve
-        # Adding debug information
-        env:
-          TF_LOG: DEBUG
-
-      - name: Post-Destroy Check
-        run: terraform state list
-        # Adding debug information
         env:
           TF_LOG: DEBUG
