--- a/.github/workflows/terraform_destroy.yml
+++ b/.github/workflows/terraform_destroy.yml
@@ -1,31 +1,42 @@
-name: Destroy Infrastructure
+name: Destroy_infrastructure
+
 on:
   workflow_dispatch:
   push:
     branches:
-      - destroy-infrastructure
+      - development
+  pull_request:
+    branches:
+      - development
 
 jobs:
-  terraform_destroy:
+  terraform:
     name: Terraform Destroy
     runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      TF_GITHUB_TOKEN: ${{ secrets.TF_GITHUB_TOKEN }} # Custom secret name for GitHub token
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
+    
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: 1.1.0
-
+          terraform_version: 0.12.6
+    
       - name: Configure AWS Credentials
         run: echo "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}" >> $GITHUB_ENV && echo "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}" >> $GITHUB_ENV
-
+      
       - name: Terraform Init
-        run: terraform init
+        run: terraform init -upgrade=true
+      
+      - name: Terraform Validate
+        run: terraform validate
+
+      - name: Show Destroy Plan
+        run: terraform plan -destroy -out=destroyplan
 
       - name: Terraform Destroy
-        run: terraform destroy -auto-approve
+        run: terraform apply -auto-approve destroyplan
