--- a/.github/workflows/terraform1_API.yml
+++ b/.github/workflows/terraform1_API.yml
@@ -1,4 +1,4 @@
-name: Apply_infrastructure
+name: Apply_infrastructure for API
 
 on:
   workflow_dispatch:
@@ -10,25 +10,32 @@ on:
       - feature/DD-46-API_GW
 
 jobs:
-  terraform:
-    name: Terraform Deployment
+  deploy-ingress-controller:
     runs-on: ubuntu-latest
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      TF_GITHUB_TOKEN: ${{ secrets.TF_GITHUB_TOKEN }}
-      aws-region: us-east-1
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+           aws-region: us-east-1 
+           
       - name: Checkout code
         uses: actions/checkout@v2
     
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: 0.12.6
+          terraform_version: 1.8.2
     
       - name: Configure AWS Credentials
-        run: echo "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}" >> $GITHUB_ENV && echo "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}" >> $GITHUB_ENV
+        run: |
+          echo "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}" >> $GITHUB_ENV
+          echo "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}" >> $GITHUB_ENV
       
       - name: Terraform Init
         run: terraform init -upgrade=true
