--- a/.github/workflows/terrafrom1_API.yaml
+++ b/.github/workflows/terrafrom1_API.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - feature/DD-46-API_GW
+  pull_request:
+    branches:
+      - feature/DD-46-API_GW
 
 jobs:
   deploy-ingress-controller:
@@ -15,32 +18,23 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-           aws-region: us-east-1 
-           
-      - name: Checkout code
-        uses: actions/checkout@v2
-    
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: 1.8.2
-    
-      - name: Configure AWS Credentials
-        run: |
-          echo "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}" >> $GITHUB_ENV
-          echo "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}" >> $GITHUB_ENV
-      
+
       - name: Terraform Init
         run: terraform init -upgrade=true
-      
+
       - name: Terraform Validate
         run: terraform validate
-      
+
       - name: Terraform Plan
         run: terraform plan -out=tfplan
-      
+
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
