--- a/.github/workflows/terrafrom1_API.yaml
+++ b/.github/workflows/terrafrom1_API.yaml
@@ -9,32 +9,34 @@ on:
       - feature/DD-46-API_GW
 
 jobs:
-  deploy-API:
+  terraform:
+    name: Terraform Deployment
     runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      TF_GITHUB_TOKEN: ${{ secrets.TF_GITHUB_TOKEN }}
+      AWS_REGION: us-east-1 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-
+    
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: 1.8.2
-
+          terraform_version: 0.12.6
+    
+      - name: Configure AWS Credentials
+        run: echo "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}" >> $GITHUB_ENV && echo "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}" >> $GITHUB_ENV
+      
       - name: Terraform Init
         run: terraform init -upgrade=true
-
+      
       - name: Terraform Validate
         run: terraform validate
-
+      
       - name: Terraform Plan
         run: terraform plan -out=tfplan
-
+      
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
