--- a/.github/workflows/terrafrom1_API.yaml
+++ b/.github/workflows/terrafrom1_API.yaml
@@ -29,8 +29,8 @@ jobs:
       - name: Configure AWS Credentials
         run: echo "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}" >> $GITHUB_ENV && echo "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}" >> $GITHUB_ENV
       
-      - name: Terraform Init
-        run: terraform init -upgrade=true
+      - name: Initialize terraform
+        run: terraform init 
       
       - name: Terraform Validate
         run: terraform validate
