--- a/.github/workflows/terrafrom1_API.yaml
+++ b/.github/workflows/terrafrom1_API.yaml
@@ -12,8 +12,8 @@ jobs:
     name: Terraform Deployment
     runs-on: ubuntu-latest
     env:
-      AWS_ACCESS_KEY_ID_AK: ${{ secrets.AWS_ACCESS_KEY_ID_AK }}
-      AWS_SECRET_ACCESS_KEY_AK: ${{ secrets.AWS_SECRET_ACCESS_KEY_AK }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_AK }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_AK }}
       TF_GITHUB_TOKEN: ${{ secrets.TF_GITHUB_TOKEN }}
       AWS_REGION: us-east-1 
     steps:
@@ -26,7 +26,7 @@ jobs:
           terraform_version: 0.12.6
     
       - name: Configure AWS Credentials
-        run: echo "AWS_ACCESS_KEY_ID_AK=${AWS_ACCESS_KEY_ID_AK}" >> $GITHUB_ENV && echo "AWS_SECRET_ACCESS_KEY_AK=${AWS_SECRET_ACCESS_KEY_AK}" >> $GITHUB_ENV
+        run: echo "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID_AK}" >> $GITHUB_ENV && echo "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY_AK}" >> $GITHUB_ENV
       
       - name: Initialize terraform
         run: terraform init 
