--- a/.github/workflows/terrafrom1_API.yaml
+++ b/.github/workflows/terrafrom1_API.yaml
@@ -12,9 +12,6 @@ jobs:
     name: Terraform Deployment
     runs-on: ubuntu-latest
     env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_AK }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_AK }}
-      TF_GITHUB_TOKEN: ${{ secrets.TF_GITHUB_TOKEN }}
       AWS_REGION: us-east-1 
     steps:
       - name: Checkout code
@@ -26,7 +23,11 @@ jobs:
           terraform_version: 0.12.6
     
       - name: Configure AWS Credentials
-        run: echo "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID_AK}" >> $GITHUB_ENV && echo "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY_AK}" >> $GITHUB_ENV
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_AK }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_AK }}
+          aws-region: ${{ env.AWS_REGION }}
       
       - name: Initialize terraform
         run: terraform init 
