--- a/.github/workflows/terrafrom1_API.yaml
+++ b/.github/workflows/terrafrom1_API.yaml
@@ -1,4 +1,5 @@
-name: Apply_infrastructure for API
+name: Apply infrastructure for API
+
 on:
   push:
     branches:
@@ -12,31 +13,34 @@ jobs:
     name: Terraform Deployment
     runs-on: ubuntu-latest
     env:
-      AWS_REGION: us-east-1 
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_AK }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_AK }}
+      TF_GITHUB_TOKEN: ${{ secrets.TF_GITHUB_TOKEN }}
+      AWS_REGION: us-east-1
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-    
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: 0.12.6
-    
+
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_AK }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_AK }}
-          aws-region: ${{ env.AWS_REGION }}
-      
-      - name: Initialize terraform
-        run: terraform init 
-      
+        run: |
+          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID_AK }}" >> $GITHUB_ENV
+          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY_AK }}" >> $GITHUB_ENV
+
+      - name: Initialize Terraform
+        run: terraform init
+
       - name: Terraform Validate
         run: terraform validate
-      
+
       - name: Terraform Plan
+        if: github.event_name == 'push'  # Only run on push to the feature branch
         run: terraform plan -out=tfplan
-      
+
       - name: Terraform Apply
+        if: github.event_name == 'push'  # Only run on push to the feature branch
         run: terraform apply -auto-approve tfplan
