--- a/.github/workflows/terrafrom1_API.yaml
+++ b/.github/workflows/terrafrom1_API.yaml
@@ -28,7 +28,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_AK }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_AK }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: us-east-1
 
       - name: Verify AWS Credentials
         run: aws sts get-caller-identity
