--- a/.github/workflows/terrafrom1_API.yaml
+++ b/.github/workflows/terrafrom1_API.yaml
@@ -8,22 +8,18 @@ on:
       - feature/DD-46-API_GW
 
 jobs:
-  terraform:
-    name: Terraform Deployment
+  deploy-ingress-controller:
     runs-on: ubuntu-latest
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_AK }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_AK }}
-      TF_GITHUB_TOKEN: ${{ secrets.TF_GITHUB_TOKEN }}
-      AWS_REGION: us-east-1
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-          terraform_version: 0.12.6
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_AK }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_AK }}
+          aws-region: us-east-1
 
       - name: Configure AWS Credentials
         run: |
