--- a/.github/workflows/terrafrom1_API.yaml
+++ b/.github/workflows/terrafrom1_API.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_AK }}
+          aws-access-key: ${{ secrets.AWS_ACCESS_KEY_AK }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_AK }}
           aws-region: us-east-1
 
