--- a/.github/workflows/terrafrom1_API.yaml
+++ b/.github/workflows/terrafrom1_API.yaml
@@ -6,34 +6,33 @@ on:
   pull_request:
     branches:
       - feature/DD-46-API_GW
-
 jobs:
-  deploy-ingress-controller:
+  terraform:
+    name: Terraform Deployment
     runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+    
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
         with:
-          aws-access-key: ${{ secrets.AWS_ACCESS_KEY_AK }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_AK }}
-          aws-region: us-east-1
-
+          terraform_version: 1.1.0
+    
       - name: Configure AWS Credentials
-        run: |
-          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID_AK }}" >> $GITHUB_ENV
-          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY_AK }}" >> $GITHUB_ENV
-
-      - name: Initialize terraform
+        run: echo "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}" >> $GITHUB_ENV && echo "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}" >> $GITHUB_ENV
+      
+      - name: Terraform Init
         run: terraform init
-
+      
       - name: Terraform Validate
         run: terraform validate
-
+      
       - name: Terraform Plan
         run: terraform plan -out=tfplan
-
+      
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
